tests/ui/fn/fn-recover-return-sign.stderr
error: return types are denoted using `->`
  --> $DIR/fn-recover-return-sign.rs:3:8
   |
LL | fn a() => usize { 0 }
   |        ^^ help: use `->` instead

error: return types are denoted using `->`
  --> $DIR/fn-recover-return-sign.rs:6:7
   |
LL | fn b(): usize { 0 }
   |       ^ help: use `->` instead

error: return types are denoted using `->`
  --> $DIR/fn-recover-return-sign.rs:21:25
   |
LL |     let foo = |a: bool| => bool { a };
   |                         ^^ help: use `->` instead

error: return types are denoted using `->`
  --> $DIR/fn-recover-return-sign.rs:25:24
   |
LL |     let bar = |a: bool|: bool { a };
   |                        ^ help: use `->` instead

error: aborting due to 4 previous errors

